--- a/src/Components/containers/Scores/Scores.scss
+++ b/src/Components/containers/Scores/Scores.scss
@@ -46,8 +46,11 @@
             height: 100%;
             
             display: flex;
+
             flex-direction: column;
             align-items: center;
+
+            justify-content: center;
         }
     }
 }
