--- a/src/Components/pages/Login/Login.scss
+++ b/src/Components/pages/Login/Login.scss
@@ -21,9 +21,9 @@
     min-width: 300px;
 
     display: flex;
-        flex-direction: column;
+    flex-direction: column;
 
-        align-items: center;
+    align-items: center;
 
     .login-header {
         margin-bottom: 20px;
@@ -47,6 +47,11 @@
 
         gap: 20px;
 
+        .returning-user-label {
+            font-size: 11pt;
+
+            color: $border-color;
+        }
     }
 
     .login-buttons {
