--- a/src/Components/pages/Leaderboard/Leaderboard.scss
+++ b/src/Components/pages/Leaderboard/Leaderboard.scss
@@ -81,6 +81,10 @@
                     text-align: right;
                     font-weight: bold;
                 }
+
+                td.active-user {
+                    color: $leaderboard-color-1;
+                }
             }
         }
     }
