Added click leaderboard label

--- a/src/Components/containers/Scores/Scores.scss
+++ b/src/Components/containers/Scores/Scores.scss
@@ -1,61 +1,75 @@
 .scores-container {
-    padding: 0.5% 1% 2%;
+	padding: 0.5% 1% 2%;
 
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
+	grid-template-columns: auto auto;
+	grid-template-rows: auto auto;
 
-    column-gap: 7px;
-    row-gap: 7px;
+	column-gap: 7px;
+	row-gap: 7px;
 
-    display: inline-grid;
+	display: inline-grid;
 
-    float: right;
-    text-align: right;
+	float: right;
+	text-align: right;
 
-    width: 240px;
+	width: 240px;
 
-    cursor: pointer;
+	cursor: pointer;
 
-    .score-label {
-        color: #cbb9b9;
+	.score-label {
+		color: #cbb9b9;
 
-        font-size: 10pt;
-        font-weight: bold;
+		font-size: 10pt;
+		font-weight: bold;
 
-        padding-top: 0px;
-        text-align: left;
-    }
+		padding-top: 0px;
+		text-align: left;
+	}
 
-    .score {
-        text-align: center;
-        display: inline-block;
+	.score-button {
+		padding: 7px 10px;
 
-        position: relative;
+		// span 2 columns
+		grid-column: span 2;
 
-        padding: 7px 10px;
+		text-align: center;
 
-        color: #fff;
-        background: #1c68ba;
+		font-size: 12pt;
+		font-weight: bold;
 
-        line-height: 1.3;
+		color: #1c68ba;
+	}
 
-        .score-value {
-            font-size: 12pt;
-            font-weight: bold;
+	.score {
+		text-align: center;
+		display: inline-block;
 
-            height: 100%;
-            
-            display: flex;
+		position: relative;
 
-            flex-direction: column;
-            align-items: center;
+		padding: 7px 10px;
 
-            justify-content: center;
-        }
-    }
+		color: #fff;
+		background: #1c68ba;
+
+		line-height: 1.3;
+
+		.score-value {
+			font-size: 12pt;
+			font-weight: bold;
+
+			height: 100%;
+
+			display: flex;
+
+			flex-direction: column;
+			align-items: center;
+
+			justify-content: center;
+		}
+	}
 }
 
 .scores-container:hover,
 .scores-container:focus {
-  box-shadow: 0 0 20px rgba(0, 0, 0, .30);
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
